# jiaoxiaoban

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/agents/: assistant_agent.py  community_admin_agent.py  professional_agent_runner.py
app/api/: agent_runs.py  assistant.py  community.py  community_agent.py  health.py  rag.py  reminders.py
app/chains/: direct_chat_chain.py  intent_router_chain.py  safety_check_chain.py  task_draft_chain.py  task_fields_extract_chain.py
app/config/: settings.py
app/data_processing/: analyze_agent_logs.py
app/db/: checkpointer.py  extensions.py  models.py
app/graphs/: assistant_graph.py  community_agent_subgraph.py  community_task_graph.py  safety_graph.py
app/schemas/: agent.py  community.py  post.py  safety.py
app/services/: community_post_service.py  confirmation_service.py  conversation_service.py  demo_fixture_service.py  frontend_agent_adapter_service.py  rag_service.py  tool_call_service.py
campus-agent-service/: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  findings.md  init_db.py  task_plan.md
campus-agent-service/.claude/: settings.local.json
campus-agent-service/app/: main.py
campus-agent-service/docs/: ARCHITECTURE.md  DEV_NOTES.md  developer_guide.md  项目全面评估报告.md  (+1 more)
frontend/: package-lock.json
scripts/: seed_demo_data.py  verify_architecture.py
tests/: test_architecture_contracts.py  test_assistant_planner_chain.py  test_assistant_resume.py  test_community_posts.py  test_frontend_interaction_contracts.py  test_json_utils.py  test_llm_config_missing.py
(+67 files in other folders)
