[project]
name = "campus-agent-service"
version = "1.0.0"
description = "交小伴 Agent Service - 校园生活智能体平台 Agent 后端服务层"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.0",
    "redis[hiredis]>=5.0.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg[binary]>=3.2.0",
    "langchain-community>=0.3.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "polars>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.7.0",
    "faiss-cpu>=1.8.0",
    "pgvector>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"
